[gd_scene load_steps=15 format=2]

[ext_resource path="res://Menu/Themes/selected_button.tres" type="StyleBox" id=1]
[ext_resource path="res://Menu/Themes/unselected_button.tres" type="StyleBox" id=2]
[ext_resource path="res://Menu/Sources/Images/Opcoes05.png" type="Texture" id=3]
[ext_resource path="res://Menu/Sources/Images/Opcoes03.png" type="Texture" id=4]
[ext_resource path="res://Menu/Sources/Images/Opcoes02.png" type="Texture" id=5]
[ext_resource path="res://Menu/Sources/Images/Opcoes01.png" type="Texture" id=6]
[ext_resource path="res://Menu/Sources/Images/Opcoes04.png" type="Texture" id=7]
[ext_resource path="res://Menu/Sources/Images/Opcoes00.png" type="Texture" id=8]
[ext_resource path="res://Menu/Scripts/opcoes_Button.gd" type="Script" id=9]
[ext_resource path="res://Menu/Sources/Audio/button_sfx.wav" type="AudioStream" id=10]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform float height = 3.0;
uniform float frequency = 1.0;
uniform float speed = 1.0;

void vertex() {
 VERTEX.y += height * sin((frequency * UV.x) + (speed * TIME));
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/height = 3.0
shader_param/frequency = 1.0
shader_param/speed = 1.0

[sub_resource type="Animation" id=3]
length = 0.8
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Opcoes00:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Opcoes01:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Opcoes02:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Opcoes03:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Opcoes04:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.65 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Opcoes05:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.8
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Opcoes00:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Opcoes01:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.65 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Opcoes02:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Opcoes03:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Opcoes04:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Opcoes05:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="opcoes_Button" type="Button"]
margin_right = 265.0
margin_bottom = 64.0
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opcoes05" type="Sprite" parent="."]
material = SubResource( 6 )
position = Vector2( 132, 32 )
texture = ExtResource( 3 )

[node name="Opcoes04" type="Sprite" parent="."]
position = Vector2( 132, 32 )
texture = ExtResource( 7 )

[node name="Opcoes03" type="Sprite" parent="."]
position = Vector2( 132, 32 )
texture = ExtResource( 4 )

[node name="Opcoes02" type="Sprite" parent="."]
position = Vector2( 132, 32 )
texture = ExtResource( 5 )

[node name="Opcoes01" type="Sprite" parent="."]
position = Vector2( 132, 32 )
texture = ExtResource( 6 )

[node name="Opcoes00" type="Sprite" parent="."]
position = Vector2( 132, 32 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "opcoes02"
anims/opcoes01 = SubResource( 3 )
anims/opcoes02 = SubResource( 4 )

[node name="button_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -40.0
bus = "SFX"
[connection signal="focus_entered" from="." to="." method="_on_opcoes_Button_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_opcoes_Button_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_opcoes_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_opcoes_Button_mouse_exited"]
